tests/NormalTests/paczka1/fuzzy1/94585884.err
Error in line 2: tYQJyUX A28 94,9
Error in line 10: tYQJyUX A665 46,3
Error in line 23: tYQJyUX A28 58,4
Error in line 25: tYQJyUX A865 13,5
Error in line 16: abR9Gv832xC A865 30,9
Error in line 26: tYQJyUX A28 51,4
Error in line 27: MdlYsywBb A28 85,1
Error in line 33: A665 A665 11,0
Error in line 28: abR9Gv832xC A665 15,1
Error in line 35: A665 S981 71,5
